# hacktech

./: .gitignore  Mic_plus_heater.csv  Mic_plus_rain.csv  README.md  fan_db_norm.csv  heater_db_norm.csv  inference_ensemble.csv  inference_results.csv  man-sleeping_motion_segments.csv  movingPerson.ipynb  test.ipynb  training.ipynb
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  main.py  model.py  models.py  utils.py
backend/app/routes/: auth.py  chat.py  recordings.py  token.py  uploadthing.py  users.py
doc/: devpost.md
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  server.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: signal.json  signal_compressed_total.csv
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: upload.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: AnalysisChart.tsx  CloudCard.tsx  Footer.tsx  LogoutButton.tsx  Navbar.tsx  SleepRecordingCard.tsx  StarryBackground.tsx  StarryBackgroundSimple.tsx  UploadButton.tsx  UploadForm.tsx
frontend/src/context/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/inference/: client.gen.ts  (+2 more)
hacktech/: signal_compressed.csv  signal_compressed_total.csv
hacktech/app/: inferenceWithoutNoise.py  main.py
model/: Mic_plusBFS.csv  Mic_plus_fan.csv  Mic_plus_white_noise.csv  rain_db_norm.csv  signal_with_preds.csv  training.ipynb  trainingWithNoise.ipynb  white_noise_db_norm.csv  xgboost.ipynb
uploadthing/: README.md  index.ts  package.json
uploadthing/src/: index.ts  uploadthing.ts
(+9 files in other folders)
