[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "cryptography>=44.0.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-auth>=2.39.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2>=2.9.10",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
